<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layoutdemo.LayoutDemoActivity">

    <Button
        android:id="@+id/layout_demo_act_btn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/layout_demo_act_btn_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/layout_demo_act_btn_text_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/layout_demo_act_btn_txt_image"
        app:icon="@android:drawable/ic_dialog_email"
        app:layout_constraintStart_toEndOf="@+id/layout_demo_act_btn_text"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/layout_demo_act_ibtn_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/layout_demo_act_btn_image"
        app:layout_constraintStart_toEndOf="@+id/layout_demo_act_btn_text_image"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera"
        tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />

    <CheckBox
        android:id="@+id/layout_demo_act_cbx_fruit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/layout_demo_act_cbx_fruit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_demo_act_btn_text" />

    <CheckBox
        android:id="@+id/layout_demo_act_cbx_meat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/layout_demo_act_cbx_meat"
        app:layout_constraintStart_toEndOf="@+id/layout_demo_act_cbx_fruit"
        app:layout_constraintTop_toBottomOf="@+id/layout_demo_act_btn_text_image" />

    <RadioGroup
        android:id="@+id/layout_demo_act_rgrp_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_demo_act_cbx_fruit">

        <RadioButton
            android:id="@+id/layout_demo_act_rbtn_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/layout_demo_act_rbtn_one" />

        <RadioButton
            android:id="@+id/layout_demo_act_rbtn_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout_demo_act_rbtn_two" />

        <RadioButton
            android:id="@+id/layout_demo_act_rbtn_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout_demo_act_rbtn_three" />
    </RadioGroup>

    <ToggleButton
        android:id="@+id/layout_demo_act_tbtn_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:textOff="@string/layout_demo_act_tbtn_power"
        android:textOn="@string/layout_demo_act_tbtn_power"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toEndOf="@+id/layout_demo_act_rgrp_level"
        app:layout_constraintTop_toBottomOf="@+id/layout_demo_act_cbx_meat"
        tools:ignore="TextContrastCheck" />

    <RatingBar
        android:id="@+id/layout_demo_act_rbar_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/layout_demo_act_rbar_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_demo_act_rgrp_level" />

    <EditText
        android:id="@+id/layout_demo_act_etxt_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/layout_demo_act_etxt_msg"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_demo_act_rbar_star"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/layout_demo_act_btn_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:text="@string/layout_demo_act_btn_toast"
        app:layout_constraintStart_toEndOf="@+id/layout_demo_act_etxt_msg"
        app:layout_constraintTop_toBottomOf="@+id/layout_demo_act_rbar_star" />
</androidx.constraintlayout.widget.ConstraintLayout>