<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/about_me_act_tvNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/about_me_act_name_title" />

            <TextView
                android:id="@+id/about_me_act_tvNameVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/about_me_act_name_value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/about_me_act_tvAgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_shaded"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/about_me_act_age_title" />

            <TextView
                android:id="@+id/about_me_act_tvAgeVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_shaded"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/about_me_act_age_value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/about_me_act_tvProgramTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/about_me_act_program_title" />

            <TextView
                android:id="@+id/about_me_act_tvProgramVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/about_me_act_program_value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/about_me_act_tvYearLvlTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_shaded"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/about_me_act_year_lvl_title" />

            <TextView
                android:id="@+id/about_me_act_tvYearLvlVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_shaded"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/about_me_act_year_lvl_value" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/about_me_act_tvJobExperienceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/about_me_act_job_experience_title" />

            <TextView
                android:id="@+id/about_me_act_tvJobExperienceVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/about_me_act_job_experience_value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/about_me_act_tvFavoriteFrameworkTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_shaded"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/about_me_act_favorite_framework_title" />

            <TextView
                android:id="@+id/about_me_act_tvFavoriteFrameworkValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_shaded"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/about_me_act_favorite_framework_value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/about_me_act_tvFavoriteCSSFrameworkTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/about_me_act_favorite_css_framework_title" />

            <TextView
                android:id="@+id/about_me_act_tvFavoriteCSSFrameworkValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/about_me_act_favorite_css_framework_value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/about_me_act_tvFavoriteHostingServiceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_shaded"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/about_me_act_favorite_hosting_service_title" />

            <TextView
                android:id="@+id/about_me_act_tvFavoriteHostingServiceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_shaded"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/about_me_act_favorite_hosting_service_value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/about_me_act_tvLinusTorvaldsQuoteTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/about_me_act_favorite_linus_quote_title" />

            <TextView
                android:id="@+id/about_me_act_tvLinusTorvaldsQuoteValue"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/about_me_act_favorite_linus_quote_value" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>