<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firebasecrud.FirebaseCRUDActivity"
    android:id="@+id/drawer_layout">

    <include
        android:id="@+id/include"
        layout="@layout/content_firebase_crud" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fabLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFirebaseCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="?attr/colorPrimary"
            android:contentDescription="@string/fab_create"
            android:src="@drawable/icons8_plus_67"
            app:backgroundTint="#00FFFFFF"
            app:fabSize="auto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFirebaseCreateList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/fab_create_list"
            android:focusable="true"
            android:src="@drawable/icons8_list_64"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/fabFirebaseCreate"
            app:layout_constraintEnd_toEndOf="@+id/fabFirebaseCreate"
            app:tint="@color/white"
            tools:ignore="ImageContrastCheck"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFirebaseCreateTodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:clickable="true"
            android:contentDescription="@string/fab_create_todo"
            android:focusable="true"
            android:src="@drawable/icons8_checkmark_64"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/fabFirebaseCreateList"
            app:layout_constraintEnd_toEndOf="@+id/fabFirebaseCreateList"
            app:tint="@color/white"
            tools:ignore="ImageContrastCheck"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:headerLayout="@layout/navigation_drawer_header"
        app:menu="@menu/menu"
        android:id="@+id/nav_menu"
        android:layout_gravity="start"/>


</androidx.drawerlayout.widget.DrawerLayout>